@@ -1,1 +1,2 @@
-toooting愉快！此版本包括以下改进和修复：
+tooot-ing愉快！此版本包括以下改进和修复：
+- 修复投票通知显示
