@@ -1,1 +1,2 @@
 Enjoy toooting! This version includes following improvements and fixes:
+- Fix poll notifications wrongly greyed out
